--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
 
     <!-- Main Game Area -->
-    <main class="flex flex-col items-center p-3 space-y-4">
+    <main class="flex flex-col items-center p-2 space-y-2 min-h-[calc(100vh-60px)]">
         <!-- Progress Bar -->
         <div id="progressContainer" class="w-full max-w-md hidden">
             <div class="flex justify-between text-white text-sm mb-2">
@@ -85,21 +85,21 @@
         </div>
 
         <!-- Flash Card Container -->
-        <div id="cardContainer" class="relative w-80 h-80 max-w-[85vw] max-h-[45vh] perspective-1000">
+        <div id="cardContainer" class="relative w-full max-w-md h-full flex-1 perspective-1000">
             <!-- Welcome Card -->
-            <div id="welcomeCard" class="absolute inset-0 bg-white rounded-2xl shadow-2xl flex flex-col p-6 overflow-y-auto">
-                <div class="text-center mb-6">
-                    <h2 class="text-3xl font-bold text-gray-800 mb-2">Welcome to Zo Flash Cards!</h2>
-                    <div class="text-4xl mb-4">📚</div>
-                    <button id="playNowBtn" class="bg-green-500 text-white px-8 py-3 rounded-lg font-medium text-lg shadow-lg hover:bg-green-600 transition-colors">
+            <div id="welcomeCard" class="absolute inset-0 bg-white rounded-2xl shadow-2xl flex flex-col p-4 overflow-y-auto">
+                <div class="text-center mb-4">
+                    <h2 class="text-2xl font-bold text-gray-800 mb-2">Welcome to Zo Flash Cards!</h2>
+                    <div class="text-3xl mb-3">📚</div>
+                    <button id="playNowBtn" class="bg-green-500 text-white px-6 py-2 rounded-lg font-medium shadow-lg hover:bg-green-600 transition-colors">
                         Play Now
                     </button>
                 </div>
                 
                 <!-- Previous Scores Section -->
-                <div id="previousScoresSection" class="flex-1">
+                <div id="previousScoresSection" class="flex-1 flex flex-col">
                     <h3 class="text-lg font-semibold text-gray-800 mb-3 text-center">Previous Sessions</h3>
-                    <div id="previousScoresList" class="space-y-3 max-h-64 overflow-y-auto">
+                    <div id="previousScoresList" class="space-y-3 flex-1 overflow-y-auto">
                         <p class="text-gray-500 text-center text-sm">No previous sessions yet</p>
                     </div>
                 </div>
