Added colors and stuff
added colors and Check symbols and X's on card now.. also fixed a few bugs

--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
             <!-- Content Type Selection -->
             <div class="mb-6">
                 <h3 class="text-lg font-semibold mb-3">Content Type</h3>
-                <div class="flex gap-2">
-                    <button id="lettersBtn" class="flex-1 py-3 px-4 bg-blue-500 text-white rounded-lg font-medium">Letters</button>
-                    <button id="numbersBtn" class="flex-1 py-3 px-4 bg-gray-200 text-gray-700 rounded-lg font-medium">Numbers</button>
+                <div class="grid grid-cols-3 gap-2">
+                    <button id="lettersBtn" class="py-3 px-3 bg-blue-500 text-white rounded-lg font-medium text-sm">Letters</button>
+                    <button id="numbersBtn" class="py-3 px-3 bg-gray-200 text-gray-700 rounded-lg font-medium text-sm">Numbers</button>
+                    <button id="colorsBtn" class="py-3 px-3 bg-gray-200 text-gray-700 rounded-lg font-medium text-sm">Colors</button>
                 </div>
             </div>
 
