--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
             <!-- Welcome Card -->
             <div id="welcomeCard" class="absolute inset-0 bg-white rounded-2xl shadow-2xl flex flex-col p-4 overflow-y-auto">
                 <div class="text-center mb-4">
-                    <h2 class="text-2xl font-bold text-gray-800 mb-2">Welcome to Zo Flash Cards!</h2>
+                    <h2 class="text-4xl font-bold text-gray-800 mb-2">Welcome</h2>
                     <div class="text-3xl mb-3">📚</div>
-                    <button id="playNowBtn" class="bg-green-500 text-white px-6 py-2 rounded-lg font-medium shadow-lg hover:bg-green-600 transition-colors">
+                    <button id="playNowBtn" class="bg-green-500 text-white px-8 py-4 rounded-lg font-bold text-xl shadow-lg hover:bg-green-600 transition-colors">
                         Play Now
                     </button>
                 </div>
